# News-Aggregator

./: docker-compose.yml  main.py  pyproject.toml
notebooks/: 00_llm_test.ipynb  news_extraction.ipynb
postgres_data/: postmaster.pid
postgres_data/base/1/: 2619  pg_internal.init
postgres_data/base/16384/: 2619  pg_internal.init
postgres_data/base/5/: 2619  pg_internal.init
postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
services/: database.py  email_service.py  llm_service.py  news_extractor.py  test.py
