[project]
name = "news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "groq>=1.0.0",
    "lxml>=6.0.2",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.38.0",
]
